--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 # C extensions
 *.so
 
+*.csv
 # Distribution / packaging
 .Python
 env/
@@ -81,6 +82,8 @@ celerybeat-schedule
 
 data/stackoverflow_sample_125k.tsv
 
+data/*.*
+data/train/*
 
 # Jupyter 
 *.DS_Store
